--- a/data-architect.html
+++ b/data-architect.html
@@ -137,7 +137,7 @@
 <p><span class="badge badge-light">Minneapolis, MNMinneapolis</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698067473-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">Pittsburgh United States</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ridango/e39436d7-e61b-4b36-b664-3751de9afb51/apply'>Ridango AS - Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Data Architect. Tallinn. Engineering ? Development Leads. Full-time. Submit your 
 application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -218,7 +218,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -230,7 +230,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199127?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Data Architect</a></h5> 
+<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199127?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -256,7 +256,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Auckland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999697649915-analyst-data-architecture'>Publicis Groupe Analyst, Data Architecture | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY 10014, USA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -346,11 +346,11 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/8a7gt1cek5a9nse98mta61fx9h'>Senior Data Engineer / Data Architect (Private Equity Company) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/data-technical-architect-23803-fl-bxV7Mq7ZCr6BDjaKjNoogA'>Data/Technical Architect-23803-FL #0634 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -374,7 +374,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Vilnius</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://agribank.applytojob.com/apply/ylz6Qczma5/Principal-Digital-Data-Delivery-Architect'>Principal Digital Data Delivery Architect - AgriBank - Career Page</a></h5> 
+<h5><a href='http://agribank.applytojob.com/apply/ylz6Qczma5/Principal-Digital-Data-Delivery-Architect'>Principal Digital Data Delivery Architect - AgriBank - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -410,7 +410,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
+<h5><a href='http://jobs.jobvite.com/aarete/job/osCE7fwz'>AArete Careers - Sr. Data Architecture Consultant</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -446,7 +446,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://rosedigital.applytojob.com/apply/JRM6twD3Nq/Big-Data-Architect'>Big Data Architect - Rose Digital - Career Page</a></h5> 
+<h5><a href='http://rosedigital.applytojob.com/apply/JRM6twD3Nq/Big-Data-Architect'>Big Data Architect - Rose Digital - Career Page</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
